[gd_scene load_steps=11 format=3 uid="uid://cgkb6rh0joakn"]

[ext_resource type="Script" uid="uid://ddcbvxctik0tr" path="res://panels/UIPanelSettings/UIPanelSettings.gd" id="1_4hx28"]
[ext_resource type="StyleBox" uid="uid://drpfuhk8y61xk" path="res://assets/styles/UIPanelPopup.tres" id="1_i7um0"]
[ext_resource type="PackedScene" uid="uid://dr0kfolsg46yu" path="res://panels/UIPanel/PanelMenuBar.tscn" id="3_ct4k6"]
[ext_resource type="Texture2D" uid="uid://bly6v8fqc5sdb" path="res://assets/icons/Panel.svg" id="4_1jyub"]
[ext_resource type="Texture2D" uid="uid://bhl73t2e0jcwn" path="res://assets/icons/close.svg" id="5_a0kig"]
[ext_resource type="PackedScene" uid="uid://bwj2kgbjtdg17" path="res://components/ClientComponentSettings/ClientComponentSettings.tscn" id="6_a0kig"]
[ext_resource type="Script" uid="uid://c20borh60xiu1" path="res://panels/UIPanelSettings/Shortcuts.gd" id="6_ct4k6"]
[ext_resource type="Texture2D" uid="uid://bbennjke0ioen" path="res://assets/icons/Add.svg" id="6_i3a75"]
[ext_resource type="Texture2D" uid="uid://f8q8t2pxjmkl" path="res://assets/icons/remove_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" id="8_ct4k6"]

[sub_resource type="ButtonGroup" id="ButtonGroup_i7um0"]

[node name="UIPanelSettings" type="PanelContainer" node_paths=PackedStringArray("_shortcuts_panel", "_settings_panel", "edit_controls", "menu_bar")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -505.0
offset_top = -300.0
offset_right = 505.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_i7um0")
script = ExtResource("1_4hx28")
_shortcuts_panel = NodePath("VBoxContainer/Shortcuts")
_settings_panel = NodePath("VBoxContainer/Settings/ClientComponentSettings")
edit_controls = NodePath("VBoxContainer/PanelMenuBar/HBoxContainer/EditControls")
menu_bar = NodePath("VBoxContainer/PanelMenuBar")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PanelMenuBar" parent="VBoxContainer" instance=ExtResource("3_ct4k6")]
layout_mode = 2

[node name="PanelName" parent="VBoxContainer/PanelMenuBar/HBoxContainer" index="0"]
text = "Panel Settings"
icon = ExtResource("4_1jyub")

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/PanelContainer"]
layout_mode = 2

[node name="SettingsTab" type="Button" parent="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_i7um0")
text = "Settings"

[node name="ShortcutsTab" type="Button" parent="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_i7um0")
text = "Shortcuts"

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/PanelMenuBar/HBoxContainer" index="2"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/PanelMenuBar/HBoxContainer/PanelContainer"]
layout_mode = 2
text = "Close Panel"
icon = ExtResource("5_a0kig")

[node name="Settings" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ClientComponentSettings" parent="VBoxContainer/Settings" instance=ExtResource("6_a0kig")]
layout_mode = 2
size_flags_vertical = 3

[node name="Shortcuts" type="PanelContainer" parent="VBoxContainer" node_paths=PackedStringArray("_button_tree", "_action_tree", "_add_action_button", "_remove_action_button")]
visible = false
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("6_ct4k6")
_button_tree = NodePath("HBoxContainer/ButtonList")
_action_tree = NodePath("HBoxContainer/VBoxContainer/ActionTree")
_add_action_button = NodePath("HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer/AddAction")
_remove_action_button = NodePath("HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer/RemoveAction")

[node name="HBoxContainer" type="HSplitContainer" parent="VBoxContainer/Shortcuts"]
layout_mode = 2

[node name="ButtonList" type="Tree" parent="VBoxContainer/Shortcuts/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
hide_root = true
select_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Shortcuts/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ActionTree" type="Tree" parent="VBoxContainer/Shortcuts/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
hide_root = true
select_mode = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/Shortcuts/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Shortcuts/HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="AddAction" type="Button" parent="VBoxContainer/Shortcuts/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Add"
icon = ExtResource("6_i3a75")

[node name="RemoveAction" type="Button" parent="VBoxContainer/Shortcuts/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Remove"
icon = ExtResource("8_ct4k6")

[connection signal="panel_changed" from="." to="VBoxContainer/Shortcuts" method="set_panel"]
[connection signal="toggled" from="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/PanelContainer/HBoxContainer/SettingsTab" to="VBoxContainer/Settings" method="set_visible"]
[connection signal="toggled" from="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/PanelContainer/HBoxContainer/ShortcutsTab" to="VBoxContainer/Shortcuts" method="set_visible"]
[connection signal="item_selected" from="VBoxContainer/Shortcuts/HBoxContainer/ButtonList" to="VBoxContainer/Shortcuts" method="_on_button_list_item_selected"]
[connection signal="item_selected" from="VBoxContainer/Shortcuts/HBoxContainer/VBoxContainer/ActionTree" to="VBoxContainer/Shortcuts" method="_on_action_tree_item_selected"]
[connection signal="pressed" from="VBoxContainer/Shortcuts/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer/AddAction" to="VBoxContainer/Shortcuts" method="_on_add_action_pressed"]
[connection signal="pressed" from="VBoxContainer/Shortcuts/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer/RemoveAction" to="VBoxContainer/Shortcuts" method="_on_remove_action_pressed"]

[editable path="VBoxContainer/PanelMenuBar"]
